libdrm (2.4.18-4) UNRELEASED; urgency=low

  * Steal 03_revert_abi_change.diff from Ubuntu to revert the nouveau ABI
    change.  Current Debian kernels support only the old ABI.
    Thanks Sven Joachim!

 -- Brice Goglin <bgoglin@debian.org>  Wed, 24 Mar 2010 22:12:36 +0100

libdrm (2.4.18-3) unstable; urgency=low

  * Include full SONAME in libdrm*.install to prevent accidental breakage.
  * Add back the drm headers in libdrm-dev.

 -- Julien Cristau <jcristau@debian.org>  Tue, 16 Mar 2010 12:28:50 +0100

libdrm (2.4.18-2) unstable; urgency=low

  * Fix FTBFS on non-Linux architectures (Closes: #570851): Replace
    --{enable,disable}-radeon-experimental-api configure flag with
    --{enable,disable}-radeon since it got renamed.
  * Add ${misc:Depends} where it was missing, and fold all Depends.
  * Bump Standards-Version from 3.8.3 to 3.8.4 (no changes needed).
  * Add myself to Uploaders.

 -- Cyril Brulebois <kibi@debian.org>  Mon, 22 Feb 2010 15:31:47 +0100

libdrm (2.4.18-1) unstable; urgency=low

  * New upstream release.

 -- Brice Goglin <bgoglin@debian.org>  Thu, 18 Feb 2010 08:06:14 +0100

libdrm (2.4.17-1) unstable; urgency=low

  [ Julien Cristau ]
  * New upstream release, closes: #560434, #567831.
  * Update patch 01_default_perms.diff to account for upstream move of libdrm
    to toplevel.
  * Update libdrm2.symbols and shlibs.
  * Update libdrm-intel1.symbols and shlibs.
  * Bump debhelper build-dep, we use dh_strip --remaining-packages (closes:
    #558443).  Thanks, Sergio Gelato!
  * Enable libdrm_radeon, interface to kernel graphics memory management on
    radeon (closes: #558786).
  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
    good reason.  Thanks, Colin Watson!
  * Remove myself from Uploaders

  [ Brice Goglin ]
  * Bump linux-libc-dev dependency to 2.6.32, thanks Piotr Engelking,
    closes: #561224.
  * Add libdrm-radeon1 symbols and update shlibs.
  * Update debian/copyright.

  [ Timo Aaltonen ]