@@ -1,0 +1,59 @@
+libdrm_nouveau.so.1 libdrm-nouveau1 #MINVER#
+#MISSING: 2.4.12+git20090729.5a73f066# dma@Base 2.4.4
+ nouveau_bo_busy@Base 2.4.4
+ nouveau_bo_emit_buffer@Base 2.4.4
+#MISSING: 2.4.12+git20090729.5a73f066# nouveau_bo_fake@Base 2.4.4
+ nouveau_bo_handle_get@Base 2.4.4
+ nouveau_bo_handle_ref@Base 2.4.4
+ nouveau_bo_init@Base 2.4.4
+ nouveau_bo_map@Base 2.4.4
+ nouveau_bo_map_flush@Base 2.4.11-1ubuntu1~
+ nouveau_bo_map_range@Base 2.4.11-1ubuntu1~
+ nouveau_bo_new@Base 2.4.4
+ nouveau_bo_new_tile@Base 2.4.11-1ubuntu1~
+ nouveau_bo_pending@Base 2.4.16
+ nouveau_bo_pin@Base 2.4.4
+ nouveau_bo_ref@Base 2.4.4
+ nouveau_bo_takedown@Base 2.4.4
+#MISSING: 2.4.12+git20090729.5a73f066# nouveau_bo_tile@Base 2.4.4
+ nouveau_bo_unmap@Base 2.4.4
+ nouveau_bo_unpin@Base 2.4.4
+ nouveau_bo_user@Base 2.4.4
+#MISSING: 2.4.12+git20090729.5a73f066# nouveau_bo_validate_nomm@Base 2.4.4
+ nouveau_bo_wrap@Base 2.4.11-1ubuntu1~
+ nouveau_channel_alloc@Base 2.4.4
+ nouveau_channel_free@Base 2.4.4
+ nouveau_device_close@Base 2.4.4
+ nouveau_device_get_param@Base 2.4.4
+ nouveau_device_open@Base 2.4.4
+ nouveau_device_open_existing@Base 2.4.4
+ nouveau_device_set_param@Base 2.4.4
+#MISSING: 2.4.12+git20090729.5a73f066# nouveau_dma_channel_init@Base 2.4.4
+#MISSING: 2.4.12+git20090729.5a73f066# nouveau_dma_kickoff@Base 2.4.4
+#MISSING: 2.4.12+git20090729.5a73f066# nouveau_dma_wait@Base 2.4.4
+#MISSING: 2.4.12+git20090729.5a73f066# nouveau_fence_emit@Base 2.4.4
+#MISSING: 2.4.12+git20090729.5a73f066# nouveau_fence_flush@Base 2.4.4
+#MISSING: 2.4.12+git20090729.5a73f066# nouveau_fence_new@Base 2.4.4
+#MISSING: 2.4.12+git20090729.5a73f066# nouveau_fence_ref@Base 2.4.4
+#MISSING: 2.4.12+git20090729.5a73f066# nouveau_fence_signal_cb@Base 2.4.4
+#MISSING: 2.4.12+git20090729.5a73f066# nouveau_fence_wait@Base 2.4.4
+ nouveau_grobj_alloc@Base 2.4.4
+ nouveau_grobj_autobind@Base 2.4.4
+ nouveau_grobj_free@Base 2.4.4
+ nouveau_grobj_ref@Base 2.4.4
+ nouveau_notifier_alloc@Base 2.4.4
+ nouveau_notifier_free@Base 2.4.4
+ nouveau_notifier_reset@Base 2.4.4
+ nouveau_notifier_return_val@Base 2.4.4
+ nouveau_notifier_status@Base 2.4.4
+ nouveau_notifier_wait_status@Base 2.4.4
+ nouveau_pushbuf_emit_reloc@Base 2.4.4
+ nouveau_pushbuf_fini@Base 2.4.17-1ubuntu1~
+ nouveau_pushbuf_flush@Base 2.4.4
+ nouveau_pushbuf_init@Base 2.4.4
+ nouveau_pushbuf_marker_emit@Base 2.4.16
+ nouveau_pushbuf_marker_undo@Base 2.4.16
+ nouveau_resource_alloc@Base 2.4.4
+ nouveau_resource_destroy@Base 2.4.18
+ nouveau_resource_free@Base 2.4.4
+ nouveau_resource_init@Base 2.4.4
