@@ -3,6 +3,8 @@ libdrm (2.4.18-4) UNRELEASED; urgency=low
   * Steal 03_revert_abi_change.diff from Ubuntu to revert the nouveau ABI
     change.  Current Debian kernels support only the old ABI.
     Thanks Sven Joachim!
+  * Build a libdrm-nouveau1 package on Linux architectures (Closes: #568162).
+    Patch adapted from the Ubuntu package. Thanks Sven Joachim!
 
  -- Brice Goglin <bgoglin@debian.org>  Wed, 24 Mar 2010 22:12:36 +0100
 
